--- a/ArduinoLight/ArduinoLight.vcxproj.filters
+++ b/ArduinoLight/ArduinoLight.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="ArduinoLight.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.ArduinoLight.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
